--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
 	<description>Library enerate SQL for jdbc with object mapping</description>
 	<url>http://dynamicsql.org</url>
 
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
 	<licenses>
 		<license>
 			<name>MIT License</name>
@@ -68,8 +73,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
